--- a/configs/EQVIO_VCU.yaml
+++ b/configs/EQVIO_VCU.yaml
@@ -1,61 +1,62 @@
 GIFT:
   equaliseImageHistogram: false
-  featureDist: 40 #46 #46
+  featureDist: 46 #50 #min dis between feature
   featureSearchThreshold: 1
-  maxError: 76.21556706799433
-  maxFeatures: 60 #32 #33
+  maxError: 70 #66 #66.21556706799433 # maximum allowable reprojection error in the tracking
+  maxFeatures: 38 #30
   maxLevel: 3
-  minHarrisQuality: 0.0792713927794865
+  minHarrisQuality: 0.079 #0.0792713927794865  # track high-quality features
   ransacParams:
-    inlierThreshold: 0.0023121620935037416
-    maxIterations: 38
+    inlierThreshold: 0.00023121620935037416
+    maxIterations: 40 #38
     minDataPoints: 5
     minInliers: 21
-  trackedFeatureDist: 40 #45
-  winSize: 20 #20
+  trackedFeatureDist: 35  #35
+  winSize: 15 #20
 eqf:
   initialValue:
-    sceneDepth: 3.5 #2.8 
+    sceneDepth: 4.2 #4.2 
   initialVariance:
-    attitude: 0.13565029126052572
-    biasAcc: 0.5813333765300104
-    biasGyr: 1.79515771076
-    cameraAttitude: 0.0010228558965517584
-    cameraPosition: 0.023501400846134893
-    point: 120 #120
+    attitude: 0.23565029126052572
+    biasAcc: 0.5 #0.05813333765300104
+    biasGyr: 0.5 #1.34 #1.79515771076
+    cameraAttitude: 0.3 #0.0010228558965517584
+    cameraPosition: 0.3 #0.023501400846134893
+    point: 20 #120 #120  # uncertainty in the estimated 3D position of these points
     position: 0.1
-    velocity: 8.974852995731e-06
+    velocity: 0.000001
   measurementNoise:
-    feature: 3
-    featureOutlierAbs: 4.852186665580312
-    featureOutlierProb: 5.04229809583062128
-    featureRetention: 0.18594708334486176
+    feature: 5 #3
+    featureOutlierAbs: 7.552186665580312 #sensitve to this two 
+    featureOutlierProb: 6 #5.04229809583062128
+    featureRetention: 0.8786
   processVariance:
-    attitude: 6e-5 #6.025875320811407e-03
-    biasAcc: 0.0001 #0.001
-    biasGyr: 0.0001 #0.01
-    cameraAttitude: 9.075e-5 #9.075382174045239e-04
-    cameraPosition: 1.21e-05 #1.2188313140115635e-04
-    point: 0.0029845436136043135
-    position: 9e-3 #9.981466095928483e-02
-    velocity: 1e-5 #0.02
+    attitude: 3e-05                  #6.025875320811407e-03
+    biasAcc: 0.0003 #0.001
+    biasGyr: 0.0005                #0.01
+    cameraAttitude: 0.002      #9.075e-2 #9.075382174045239e-04
+    cameraPosition: 1e-05                  #5.2188313140115635e-04
+    point: 0.02051              #0.0029845436136043135
+    position: 0.05                 #9.981466095928483e-02
+    velocity: 0.00025                #0.02
   settings:
     coordinateChoice: InvDepth
     fastRiccati: true
     useDiscreteInnovationLift: false
     useDiscreteVelocityLift: true
     useEquivariantOutput: true
-    useFeaturePredictions: false
+    useFeaturePredictions: false #false #
     useInnovationLift: true
     useMedianDepth: false
   velocityNoise:
-    acc: 0.5 #tune this
-    accBias: 0.001
-    gyr: 0.001 #0.001
-    gyrBias: 2.0e-5
+    acc: 0.041830000000000006 #tune this
+    accBias: 0.00029
+    gyr: 0.0001
+    gyrBias: 2e-05                  #2.0e-4
 main:
+  cameraLag: 0.00457               #0.003
   limitRate: 0.0
-  startTime: 0.0
+  startTime: 0.0  #maual: 193614.659717371  hall2:3416.940431843
   writeState: true
 sim:
   cameraOffset:
@@ -72,3 +73,4 @@ sim:
   numPoints: 5000
   randomSeed: 0
   wallDistance: 1.0
+
